[gd_scene load_steps=13 format=3 uid="uid://bh7mn1s674173"]

[ext_resource type="Script" path="res://survivor_game.gd" id="1_d0kvs"]
[ext_resource type="PackedScene" uid="uid://2rxakib22p0g" path="res://player.tscn" id="1_wbaqb"]
[ext_resource type="AudioStream" uid="uid://dls6vce71mcqv" path="res://ragnarok-online-level-up-sound.mp3" id="3_xrs3s"]
[ext_resource type="Script" path="res://game_over.gd" id="4_5y4u3"]
[ext_resource type="Texture2D" uid="uid://bi8gu2ab5mb75" path="res://sword.png" id="4_fc1hp"]
[ext_resource type="Script" path="res://level_up.gd" id="4_yo2hk"]
[ext_resource type="Texture2D" uid="uid://lxwq7pu45vy1" path="res://health.png" id="5_kfkfn"]
[ext_resource type="Texture2D" uid="uid://ba526bj1al0dn" path="res://gratz.png" id="5_s2lm3"]
[ext_resource type="Texture2D" uid="uid://dahhe8cowb83b" path="res://maxhealth.png" id="6_0d6ao"]
[ext_resource type="AudioStream" uid="uid://ci4ergdqllgvk" path="res://characters/slime/1-18. Time up!!.mp3" id="9_uui4l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ird5d"]

[sub_resource type="Curve2D" id="Curve2D_xq8ky"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -117, -114, 0, 0, 0, 0, 1972, -75, 14.6494, -141.097, -14.6494, 141.097, 1997, 1169, 0, 0, 0, 0, -109, 1251, 0, 0, 0, 0, -117, -114)
}
point_count = 5

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_d0kvs")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -30

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = -38.0
offset_top = -16.0
offset_right = 1899.0
offset_bottom = 1166.0

[node name="LabelTimeSurvived" type="Label" parent="CanvasLayer/ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 819.0
offset_top = 9.0
offset_right = 1133.0
offset_bottom = 174.0
theme_override_font_sizes/font_size = 120
theme_override_styles/normal = SubResource("StyleBoxFlat_ird5d")
text = "00:00"

[node name="Player" parent="." instance=ExtResource("1_wbaqb")]
position = Vector2(909, 611)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-898.155, -609.831)
scale = Vector2(0.973037, 1.01026)
curve = SubResource("Curve2D_xq8ky")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(67.4958, 1255.18)
rotation = -3.12069
progress = 5279.54

[node name="LevelUpSoundPlayer" type="AudioStreamPlayer2D" parent="Player"]
unique_name_in_owner = true
process_mode = 3
stream = ExtResource("3_xrs3s")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
process_mode = 2
visible = false
script = ExtResource("4_5y4u3")

[node name="ColorRect" type="ColorRect" parent="GameOver"]
offset_left = -64.0
offset_top = -47.0
offset_right = 2001.0
offset_bottom = 1188.0
color = Color(0, 0, 0, 1)

[node name="Restart" type="Button" parent="GameOver/ColorRect"]
layout_mode = 0
offset_left = 618.0
offset_top = 719.0
offset_right = 1501.0
offset_bottom = 892.0
theme_override_font_sizes/font_size = 120
text = "Tentar de novo"

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -568.5
offset_top = -230.5
offset_right = 618.5
offset_bottom = 113.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 240
text = "YOU SUCK"
uppercase = true

[node name="LevelUp" type="CanvasLayer" parent="."]
unique_name_in_owner = true
process_mode = 2
visible = false
script = ExtResource("4_yo2hk")

[node name="Sprite2D" type="Sprite2D" parent="LevelUp"]
position = Vector2(962, 270)
texture = ExtResource("5_s2lm3")

[node name="MarginContainer" type="MarginContainer" parent="LevelUp"]
offset_left = 803.0
offset_top = 411.0
offset_right = 1112.0
offset_bottom = 790.0

[node name="VBoxContainer" type="VBoxContainer" parent="LevelUp/MarginContainer"]
layout_mode = 2

[node name="Attack" type="Button" parent="LevelUp/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Aumentar Ataque"
icon = ExtResource("4_fc1hp")

[node name="Heal" type="Button" parent="LevelUp/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Recuperar vida"
icon = ExtResource("5_kfkfn")

[node name="MaxHealth" type="Button" parent="LevelUp/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Aumentar vida m√°xima"
icon = ExtResource("6_0d6ao")

[node name="TimeSurvived" type="Timer" parent="."]
autostart = true

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_uui4l")
autoplay = true

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="GameOver/ColorRect/Restart" to="GameOver" method="_on_restart_pressed"]
[connection signal="pressed" from="LevelUp/MarginContainer/VBoxContainer/Attack" to="LevelUp" method="_on_attack_pressed"]
[connection signal="pressed" from="LevelUp/MarginContainer/VBoxContainer/Heal" to="LevelUp" method="_on_heal_pressed"]
[connection signal="pressed" from="LevelUp/MarginContainer/VBoxContainer/MaxHealth" to="LevelUp" method="_on_max_health_pressed"]
[connection signal="timeout" from="TimeSurvived" to="." method="_on_time_survived_timeout"]
